data/derived/comb/progs/unify/prog0132.ml.out
Characters 72-73:
  | h::t -> (a h) + myFunc f h t;;
                             ^
Error: This expression has type 'a but an expression was expected of type
         'a -> int
       The type variable 'a occurs inside 'a -> int
